[package]
name = "rust-fsm-graph"
version = "0.1.0"
authors = ["Jonas Berlin <xkr47@outerspace.dyndns.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-fsm-dsl = "0.4"

[dependencies.proc-macro2]
version = "1.0"
features = [  ]

[dependencies.syn]
version = "1.0"
features = [ "full", "parsing", "extra-traits" ]
